completed during class

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="countdown">
           <h3>Hurry! Sale ends soon!</h3>
           <div class="bar">
-
+            <p>Check it Out!</p>
           </div>
         </div>
       </div>
